# Hedge

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  secrets.yaml.example
hedge/: __main__.py  cli.py  demo.py
hedge/backtest/: engine.py
hedge/data/: loader.py  universe.py
hedge/execution/: broker.py  order_manager.py
hedge/pipeline/: orchestrator.py
hedge/portfolio/: optimizer.py
hedge/signals/: momentum.py
hedge/utils/: config.py  logging.py  risk.py
tests/: conftest.py
tests/test_portfolio/: test_optimizer.py
tests/test_signals/: test_momentum.py
